--- a/README.adoc
+++ b/README.adoc
@@ -13,7 +13,7 @@ endif::[]
 :fn-deprecated: footnote:deprecated[Deprecated. This contract is at the end of its lifecycle and will be disabled soon]
 :fn-discontinued: footnote:discontinued[Discontinued. This contract is no longer active, and is still here for posterity]
 
-This repository contains all contracts related to = %%PROJECT_NAME%%. Our intention is to help raise the standard of
+This repository contains all contracts related to Kortstrid. Our intention is to help raise the standard of
 transparency across blockchain development.
 
 [NOTE]
